<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_wol">

    <fragment
        android:id="@+id/nav_wol"
        android:name="com.sixiaolong.androidwol.ui.wol.WoLFragment"
        android:label="@string/menu_wol"
        tools:layout="@layout/fragment_wol" />

    <fragment
        android:id="@+id/nav_wol_config"
        android:name="com.sixiaolong.androidwol.ui.wol.WoLConfigFragment"
        android:label="@string/menu_wol_config"
        tools:layout="@layout/fragment_wol_config" />

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sixiaolong.androidwol.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.sixiaolong.androidwol.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.sixiaolong.androidwol.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>